better layout on mobile devices including modal scroll bug fix

--- a/src/less/custom_variables.less
+++ b/src/less/custom_variables.less
@@ -22,14 +22,13 @@
 @floating-view-margin: 50px;
 @floating-view-width: 300px;
 @floating-view-height: 314px;
-@floating-view-height-mobile: 340px;
+@floating-view-height-mobile: 390px;
 @floating-view-image-height: 263px;
 @floating-view-shadow-color: fade(#666666,10%);
-
 @portfolio-view-bg-color: #fff;
 @portfolio-title-padding: 20px;
 @portfolio-title-size: 17px;
-@portfolio-title-size-mobile: 20px;
+@portfolio-title-size-mobile: 26px;
 @portfolio-title-height: @floating-view-height - @floating-view-image-height;
 @portfolio-title-height-mobile: @floating-view-height-mobile - @floating-view-image-height;
 
@@ -37,7 +36,7 @@
 @about-view-shadow-color: fade(#000, 10%);
 @about-view-width: @floating-view-width*1.5;
 
-@font-size-mobile: 16px;
+@font-size-mobile: 23px;
 @font-size-medium: 20px;
 @font-size-large: 30px;
 @font-size-very-large: 60px;
